projects/gists/gists-front/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gists-front-ingress
  namespace: { { .Release.Namespace } }
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirection-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    name: gists-front-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - { { .Values.gists.host } }
      secretName: "gists-tls-ca-part-en-prod"
  rules:
    - host: { { .Values.gists.host } }
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gists-front
                port:
                  number: { { .Values.service.externalPort } }
